--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,6 +78,7 @@
     <string name="category">التصنيف</string>
     <string name="city">المدينة</string>
     <string name="exhibtion">المعرض</string>
+    <string name="exhibtion_">المعرض:</string>
     <string name="no_results">لا يوجد نتائج</string>
     <string name="you_should_attach_image_shop">يجب إرفاق صورة المعرض</string>
 
@@ -121,7 +122,25 @@
     <string name="for_details">لمعرفة تفاصيل المعرض</string>
     <string name="press_here">اضغط هنا</string>
     <string name="seen_no">عدد المشاهدات</string>
+    <string name="seen_no_">عدد المشاهدات:</string>
     <string name="update_version">تحديث</string>
     <string name="update_new_version">قم بتحديث النسخة من جوجل استور لتتمتع بالمميزات</string>
     <string name="update_now">حدث الآن</string>
+    <string name="skip_register">تخطي التسجيل</string>
+    <string name="have_code_invite_code">هل لديك كود من خلال دعوة صديق لك ادخله في مربع الحوار</string>
+    <string name="enter_code_here">ادخل الكود هنا</string>
+    <string name="more_browse">لتصفح المزيد اضغط هنا</string>
+    <string name="start_offer">تاريخ بداية العرض</string>
+    <string name="end_offer">تاريخ نهاية العرض</string>
+    <string name="collect_points">اجمع نقاط</string>
+    <string name="invite_firends">ادعو صديقك</string>
+    <string name="invaitation_code_for_you">كود الدعوة الخاص بك</string>
+    <string name="copy">نسخ</string>
+    <string name="get_points">قطوف! أحصل على 3 نقاط عند دعوتك لاصدقاءك</string>
+    <string name="user_name_aleady_found">اسم المستخدم موجود مسبقا</string>
+    <string name="mobile_is_already_found">رقم الهاتف موجود مسبقا</string>
+    <string name="your_points">نقاطك:</string>
+    <string name="code">كود الدعوة</string>
+    <string name="_0">0</string>
+    <string name="username_password_wrong">اسم المستخدم او كلمة مرور خاطئين</string>
 </resources>
